Fix scrollbars

--- a/sticknotes-frontend/src/app/board/board.component.css
+++ b/sticknotes-frontend/src/app/board/board.component.css
@@ -94,6 +94,7 @@ mat-card-content {
 
 .horizontal-scroll {
   overflow-x: hidden;
+  overflow-y: hidden;
   position: absolute;
   top: 0px;
   height: 37px;
@@ -109,7 +110,7 @@ mat-card-content {
   background-color: #3f51b5;
   color: white;
   border-radius: 5px;
-  margin: 3px 3px 0px 3px;
+  margin: 3px;
   padding: 3px;
 }
 
